k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:  
  selector:
    app: conversao-distancia
  ports:
  - port: 80
    targetPort: 5000
  type: NodePort
